Fix reverse the order that the transactions are committed